--- a/header.html
+++ b/header.html
@@ -2,13 +2,25 @@
 	<head>
 		<title>My first Three.js app</title>
 		<style>
-			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
+
+			html, body {
+			width: 100%;
+			height: 100%;
+			margin: 0px;
+			border: 0;
+			overflow: hidden; /*  Disable scrollbars */
+			display: block;  /* No floating content on sides */
+		}
+
 		</style>
 	</head>
 	<body>
 		<script src="js/three.min.js"></script>
 		<script>
+
+			window.addEventListener('resize', onWindowResize, false);
+
 			var scene = new THREE.Scene();
 			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
 
@@ -31,6 +43,14 @@
 			var directionalLight = new THREE.DirectionalLight( 0xffffff, 10 );
 			directionalLight.position.set( 0, 1, 10 );
 			scene.add( directionalLight );
+
+			var directionalLight2 = new THREE.DirectionalLight( 0xffffff, 10 );
+			directionalLight2.position.set( 3, 1, 4 );
+			scene.add( directionalLight2 );
+
+			var directionalLight3 = new THREE.DirectionalLight( 0xffffff, 10 );
+			directionalLight3.position.set( -3, 1, 4 );
+			scene.add( directionalLight3 );
 
 			var scaleFactor = 0;
 			var scale = 0.005;
@@ -94,15 +114,12 @@
 
 			function onWindowResize() {
 
-				windowHalfX = window.innerWidth / 2,
-				windowHalfY = window.innerHeight / 2,
-
 				camera.aspect = window.innerWidth / window.innerHeight;
 				camera.updateProjectionMatrix();
 
 				renderer.setSize( window.innerWidth, window.innerHeight );
-
 			}
+
 		</script>
 	</body>
 </html>
