--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <!-- <a class="navbar-brand page-scroll" href="#page-top">Adonis</a> -->
-                    <!-- Replace With Your Logo -->
                     <a class="navbar-brand navbar-logo page-scroll" href="#page-top"><img src="img/toolbar-home.jpg" alt="Logo"></a>
                 </div>
 
@@ -93,9 +91,10 @@
                 	<div class="col-md-12">
                     	<img class='img-circle img-responsive center-block' src='img/me.jpg'>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-md-12">
                         <div class="about text-center">
-                            <h3 class="white">Loving technology since 1993</h3>
                             <p class="white lead">
                             	<br/>
                             	I've been pasionate about technology since the early days and my firt Windows95-powered PC.
@@ -177,7 +176,7 @@
         <div class="container">
             <div class="row">
                 <h1 class="section-heading text-center white">Contact</h1>
-                <div class="col-md-12 col-md-offset-4 contact-right ">
+                <div class="col-md-8 col-md-offset-4 contact-right ">
                     <p class="lead white"><i class="fa fa-home contact-icon"></i>Mirabello, Ferrara, Italy</p>
                     <p class="lead white"><i class="fa fa-envelope"></i><a class="white" href="mailto:soffritti.pierfrancesco@gmail.com">soffritti.pierfrancesco@gmail.com</a></p>
                 </div>
@@ -221,16 +220,16 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>Shuffly</h2>
-                        <p>Shuffly is ment to discover new content on YouTube and to watch videos without having to worry about what to choose. 
-                        <br/>This time i've been pretty careful following some engieneering principles so the app is pretty extensible an maintainable.
-                        <br/>It has been pretty challenging to develop, bacause i had to overcome some 'limitation' in the YouTube Data API without at the same time sacrifice the user experience.
+                        <p>Shuffly is ment to discover new content on YouTube and to watch videos without having to worry about what to choose.
+                        <br/><br/>With Shuffly I had the chance to apply all I learned in term of code engineering and UI/UX design since OneCalculator.
+                        <br/><br/>It has been a pretty challenging app to develop, bacause i had to overcome some "limitation" in the YouTube Data API without at the same time sacrifice the user experience.
                         <br/>I've learned a lot of new cool stuff such as SQLite, the OAuth2 authentication process, EventBusess (wow) and Guava, ThreadExecutor and many more.
                         <br/>The app uses a SQLite database in order to recude at minimum the number of interactions with the YouTube server. The database is regularly kept consisted by some worker threads.
-                        <br/>Having a lot of asynchronous operations, events are a big deal in this app. In a first implementation events where dispatched using interfaces</p>
+                        <br/>Having a lot of asynchronous operations, events are a big deal in this app. Using Otto's (Guava's) EventBus made my life a lot easyer, allowing for a really awsome level of decoupling.</p>
 
                         <br/><br/>
                         Shuffly is currently released as alpha on the PlayStore.
-                        <br/>
+                        <br/><br/>
 
                         <a href="https://play.google.com/store/apps/details?id=com.pierfrancescosoffritti.shuffly" target="_blank">
 						  <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
@@ -254,7 +253,8 @@
                     <div class="modal-body">
                         <h2>One Calculator</h2>
                         <p>I start developing this app during my first java course at the university. I wanted to improve my coding skils and and learn to code on Android, which has always facinated me, since the first time I had an Android phone.
-                        <br/>At first I never inteded to release it. The code is all but well written, at the time i wasn't familiar with a lot of basic programming habits, but it has been super fun and istructive. Also I used my own calculator for all the engineering exams is had to do :)
+                        <br/>At first I never inteded to release it. The code is all but well written, at the time i wasn't familiar with a lot of basic programming habits.
+                        <br/> Develop this app has been super fun and istructive. Also I used my own calculator for all the engineering exams is had to do :)
 
                         <br/><br/>At the moment OneCalculator has almost 100.000 downloads from the store, with a pretty good rating of 4.5/5 and I also earned some money from it.</p>
 
@@ -312,6 +312,14 @@
                                 <strong><a href="https://github.com/PierfrancescoSoffritti/HeightMapGenerator" target="_blank">GitHub</a>
                                 </strong>
                             </li>
+                            <li>
+                                <strong><a href="https://www.youtube.com/watch?v=CLzB6qL86qQ" target="_blank">Simplex Noise video</a>
+                                </strong>
+                            </li>
+                            <li>
+                                <strong><a href="https://www.youtube.com/watch?v=IBLfilm35xU" target="_blank">Perlin Noise video</a>
+                                </strong>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -334,6 +342,10 @@
                                 <strong><a href="https://github.com/PierfrancescoSoffritti/TerrainGenerator" target="_blank">GitHub</a>
                                 </strong>
                             </li>
+                            <li>Have a walk 
+                                <strong><a href="https://rawgit.com/PierfrancescoSoffritti/TerrainGenerator/master/index.html" target="_blank">here</a>
+                                </strong>
+                            </li>                           
                         </ul>
                     </div>
                 </div>
@@ -350,7 +362,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>Blender</h2>
-                        <p>A still duskier place is this, with such low ponderous beams above, and such old wrinkled planks beneath, that you would almost fancy you trod some old craft's cockpits, especially of such a howling night, when this corner-anchored old ark rocked so furiously.</p>
+                        <p>Some CG works I do for fun.
+                        <br/>Sometimes I like to export them in Unity, creating an "explorable" verion of the piece.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://goo.gl/photos/NM5dzxdqEJuBn15C8" target="_blank">Album</a>
