--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <div class="col-md-12 text-center">
                                 <h1 class="white">Pierfrancesco Soffritti</h1>
                                 <h3 class="white">Welcome!</h3>
-                                <a class="page-scroll btn btn-default" href="#about" role="button">Find Out More</a>
+                                <a class="page-scroll btn btn-default" href="#about" role="button">Continue</a>
                             </div>
                         </div>
                     </div>
@@ -97,13 +97,13 @@
                         <div class="about text-center">
                             <p class="white lead">
                             	<br/>
-                            	I've been pasionate about technology since the early days and my firt Windows95-powered PC.
+                            	I've been passionate about technology since the early days and my first Windows 95-powered PC.
+                            	I fell in love with programming as soon as i wrote my first line of code, have the power to create almost everything out of nowhere is just awesome. 
                             	<br/><br/>
-                            	I'm about to end my bachelor degree in engineering and computer since at the university of Bologna.
+                            	I'm currently enrolled at the university of Bologna where i'm about to end my bachelor degree in engineering and computer science.
                             	<br/><br/>
-                            	I'm mainly a Java and Android developer but as a rule of living I always try to find some free time to learn and try something new, with the goal of becoming better and know more every day.
-                            	<br/>
-                            	Also I love UI/UX design and graphics in general.
+                            	I'm mainly a Java and Android developer. I also love UI/UX design and graphics in general, there's nothing better than see the result of my work as beautiful, vibrant pixels on the screen :)
+                            	<br/>Other than that, I always try to find some free time to learn and try something new, aiming to become better and know more every day.
 
                             </p>
                             <a class="page-scroll btn btn-white" href="#my-work">My Work</a>
@@ -220,12 +220,12 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>Shuffly</h2>
-                        <p>Shuffly is ment to discover new content on YouTube and to watch videos without having to worry about what to choose.
+                        <p>Shuffly is meant to help discover new content on YouTube and to watch videos without having to worry about what to choose.
                         <br/><br/>With Shuffly I had the chance to apply all I learned in term of code engineering and UI/UX design since OneCalculator.
-                        <br/><br/>It has been a pretty challenging app to develop, bacause i had to overcome some "limitation" in the YouTube Data API without at the same time sacrifice the user experience.
-                        <br/>I've learned a lot of new cool stuff such as SQLite, the OAuth2 authentication process, EventBusess (wow) and Guava, ThreadExecutor and many more.
-                        <br/>The app uses a SQLite database in order to recude at minimum the number of interactions with the YouTube server. The database is regularly kept consisted by some worker threads.
-                        <br/>Having a lot of asynchronous operations, events are a big deal in this app. Using Otto's (Guava's) EventBus made my life a lot easyer, allowing for a really awsome level of decoupling.</p>
+                        <br/><br/>It has been a pretty challenging app to develop, because i had to overcome some "limitation" (for my purposes) of the YouTube Data API without at the same time sacrifice the user experience.
+                        <br/>I've learned a lot of new cool stuff such as SQLite, the OAuth2 authentication process, event buses (❤) and Guava, thread pools and many more.
+                        <br/>The app uses a SQLite database in order to reduce at minimum the number of interactions with the YouTube server. The database is regularly kept consistent by some worker threads.
+                        <br/>Having a lot of asynchronous operations, events are a big deal in this app. The use of event buses has made my life a lot easier, allowing for a really awesome level of decoupling.</p>
 
                         <br/><br/>
                         Shuffly is currently released as alpha on the PlayStore.
@@ -252,9 +252,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>One Calculator</h2>
-                        <p>I start developing this app during my first java course at the university. I wanted to improve my coding skils and and learn to code on Android, which has always facinated me, since the first time I had an Android phone.
-                        <br/>At first I never inteded to release it. The code is all but well written, at the time i wasn't familiar with a lot of basic programming habits.
-                        <br/> Develop this app has been super fun and istructive. Also I used my own calculator for all the engineering exams is had to do :)
+                        <p>The development of this app has started during my first Java course at the university. I wanted to improve my coding skills and learn to code on Android, which has always fascinated me, since the first time I had an Android phone.
+                        <br/>At first I never intended to release it. The code is all but well written, at the time i wasn't familiar with a lot of basic programming practices.
+                        <br/>Developing this app has been super fun and instructive. Also I used my own calculator for all the engineering exams is had to do :)
 
                         <br/><br/>At the moment OneCalculator has almost 100.000 downloads from the store, with a pretty good rating of 4.5/5 and I also earned some money from it.</p>
 
@@ -281,8 +281,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>SecurConfort.it</h2>
-                        <p>A website I built for my father business using <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.
-                        <br/>The website is not official yet becuase i'm waiting for him to procure some stuff.</p>
+                        <p>A website I built for my father's business using <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="http://www.securconfort.it/newsite/index.html" target="_blank">SecurConfort.it</a>
@@ -304,9 +303,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>HeightMap Generator</h2>
-                        <p>A java height map generator based on Perlin Noise and Simplex Noise. It can send data through web socket to a javascript application in order to generate the 3D model of the visible height map. It may not be the best efficent but it's been useful to practise with web sockets :)
+                        <p>A Java heightmap generator based on Perlin Noise and Simplex Noise. It can send data through web socket to a javascript application in order to generate the 3D model of the heightmap. This may not be the most efficient way to send data, but has been useful to play with websockets :)
                         <br/><br/>
-                        The maps can be renderend and moved in real time (should be improved) and with different visual effects.</p>
+                        The maps can be rendered and moved in real time (should be improved) and with different visual effects.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://github.com/PierfrancescoSoffritti/HeightMapGenerator" target="_blank">GitHub</a>
@@ -336,7 +335,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>Terrain Generator</h2>
-                        <p>A javascript terrain generator based on Perlin Noise and <a href="http://threejs.org/" target="_blank">three.js</a>.<br/>Heightmaps can be generated inside the web app or taken from an external source, throught web socket.</p>
+                        <p>A javascript terrain generator based on Perlin Noise and <a href="http://threejs.org/" target="_blank">three.js</a>.<br/>Heightmaps can be generated inside the web app or taken from an external source, through web socket.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://github.com/PierfrancescoSoffritti/TerrainGenerator" target="_blank">GitHub</a>
@@ -363,7 +362,7 @@
                     <div class="modal-body">
                         <h2>Blender</h2>
                         <p>Some CG works I do for fun.
-                        <br/>Sometimes I like to export them in Unity, creating an "explorable" verion of the piece.</p>
+                        <br/>Sometimes I like to export them in Unity, creating an "explorable" version of the piece.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://goo.gl/photos/NM5dzxdqEJuBn15C8" target="_blank">Album</a>
