--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                             <div class="col-md-12 text-center">
                                 <h1 class="white">Pierfrancesco Soffritti</h1>
                                 <h3 class="white">Welcome!</h3>
+                                <h5 class="white">this site is currently hosted on GitHub.. because i'm poor :'(</h5>
                                 <a class="page-scroll btn btn-default" href="#about" role="button">Continue</a>
                             </div>
                         </div>
