--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="personal website">
+    <meta name="description" content="zz">
     <meta name="author" content="Pierfrancesco Soffritti">
 
     <title>Pierfrancesco Soffritti</title>
@@ -117,11 +117,11 @@
                             <p class="white lead">
                             	<br/>
                             	I've been passionate about technology since the early days and my first Windows 95-powered PC.
-                            	I fell in love with programming as soon as i wrote my first line of code, have the power to create almost everything out of nowhere is just awesome. 
+                            	I fell in love with programming as soon as i wrote my first line of code, having the power to create almost everything out of nowhere is just awesome. 
                             	<br/><br/>
-                            	I'm currently enrolled at the university of Bologna where i'm about to end my bachelor degree in engineering and computer science.
+                            	I'm currently enrolled at the university of Bologna where I'm about to end my bachelor degree in engineering and computer science.
                             	<br/><br/>
-                            	I'm mainly a Java and Android developer. I also love UI/UX design and graphics in general, there's nothing better than see the result of my work as beautiful, vibrant pixels on the screen :)
+                            	I'm mainly a Java and Android developer. I also love UI/UX design and graphics in general, there's nothing better than seeing the result of my work as beautiful, vibrant pixels on the screen :)
                             	<br/>Other than that, I always try to find some free time to learn and try something new, aiming to become better and know more every day.
 
                             </p>
