--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         Shuffly is currently released as alpha on the PlayStore.
                         <br/><br/>
 
-                        <a href="https://play.google.com/store/apps/details?id=com.pierfrancescosoffritti.shuffly" target="_blank">
+                        <a href="https://play.google.com/apps/testing/com.pierfrancescosoffritti.shuffly" target="_blank">
 						  <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
 						</a>
 
