--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="row">
                 	<div class="col-md-12">
-                    	<img class='img-circle img-responsive center-block' src='img/me.jpg'>
+                    	   <img class='img-circle img-responsive center-block' style="border-radius: 360px; border: 4px solid #1565C0;" src='img/me.jpg'>
                     </div>
                 </div>
                 <div class="row">
