--- a/index.html
+++ b/index.html
@@ -249,7 +249,14 @@
                         Shuffly is currently released as alpha on the PlayStore.
                         <br/><br/>
 
-                        <a href="https://play.google.com/apps/testing/com.pierfrancescosoffritti.shuffly" target="_blank">
+						<ul class="list-inline item-details">
+                            <li>
+                                <strong><a href="http://pierfrancescosoffritti.github.io/Shuffly-Website/" target="_blank">Website</a>
+                                </strong>
+                            </li>
+                        </ul>
+
+						<a href="https://play.google.com/apps/testing/com.pierfrancescosoffritti.shuffly" target="_blank">
 						  <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
 						</a>
 
