removed useless stuff

--- a/index.html
+++ b/index.html
@@ -116,14 +116,7 @@
                         <div class="about text-center">
                             <p class="white lead">
                             	<br/>
-                            	I've been passionate about technology since the early days and my first Windows 95-powered PC.
-                            	I fell in love with programming as soon as i wrote my first line of code, having the power to create almost everything out of nowhere is just awesome. 
-                            	<br/><br/>
-                            	I'm currently enrolled at the university of Bologna where I'm about to end my bachelor degree in engineering and computer science.
-                            	<br/><br/>
-                            	I'm mainly a Java and Android developer. I also love UI/UX design and graphics in general, there's nothing better than seeing the result of my work as beautiful, vibrant pixels on the screen :)
-                            	<br/>Other than that, I always try to find some free time to learn and try something new, aiming to become better and know more every day.
-
+                            	Italian dev/Android dev in love with UI/UX design and graphics in general.
                             </p>
                             <a class="page-scroll btn btn-white" href="#my-work">My Work</a>
                         </div>
@@ -154,6 +147,7 @@
                         </a>
                     </div>
 
+<!--
                     <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
                         <a href="#" class="portfolio-box portfolio-3" data-toggle="modal" data-target=".portfolioModal3">
                             <div class="portfolio-box-spacer"></div>
@@ -178,14 +172,17 @@
                             </div>
                         </a>
                     </div>
+
                     <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
                         <a href="#" class="portfolio-box portfolio-6" data-toggle="modal" data-target=".portfolioModal6">
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
-                                <h4 class="white">Blender</h4>
+                                <h4 class="white">Computer graphics</h4>
                             </div>
                         </a>
                     </div>
+
+                    -->
 
                 </div>
             </div>
@@ -292,6 +289,7 @@
         </div>
     </div>
 
+<!--
     <div class="portfolio-modal modal fade portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="row">
@@ -372,6 +370,8 @@
         </div>
     </div>
 
+    -->
+
     <div class="portfolio-modal modal fade portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="row">
@@ -381,8 +381,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>Blender</h2>
-                        <p>Some CG works I do for fun.
-                        <br/>Sometimes I like to export them in Unity, creating an "explorable" version of the piece.</p>
+                        <p>Some CG works I do for fun.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://goo.gl/photos/NM5dzxdqEJuBn15C8" target="_blank">Album</a>
