--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/adonis.min.css" type="text/css">
+    <link rel="stylesheet" href="css/adonis.css" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -169,6 +169,15 @@
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
                                 <h4 class="white">Terrain Generator</h4>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
+                        <a href="#" class="portfolio-box portfolio-7" data-toggle="modal" data-target=".portfolioModal7">
+                            <div class="portfolio-box-spacer"></div>
+                            <div class="portfolio-box-caption">
+                                <h4 class="white">HTML5 canvas music player</h4>
                             </div>
                         </a>
                     </div>
@@ -376,11 +385,34 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
-                        <h2>Blender</h2>
+                        <h2>Computer Graphics</h2>
                         <p>Some CG works I do for fun.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://goo.gl/photos/NM5dzxdqEJuBn15C8" target="_blank">Album</a>
+                                </strong>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="row">
+                <div class="modal-head">
+                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>HTML5 canvas music player</h2>
+                        <p>Fun project done in an evening, in order to do some practise with JavaScript and to explore some interesting technologies  (HTML5 canvas + Web Audio API).<br/>It's not very well built, it may not work with safari and maybe other browsers D: use it with Chrome :)
+                        </p>
+                        <ul class="list-inline item-details">
+                            <li>
+                                <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/WTPlayer/index.html" target="_blank">WTPlayer</a>
                                 </strong>
                             </li>
                         </ul>
