--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@
                     </div>
 
                     <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
+                        <a href="#" class="portfolio-box portfolio-8" data-toggle="modal" data-target=".portfolioModal8">
+                            <div class="portfolio-box-spacer"></div>
+                            <div class="portfolio-box-caption">
+                                <h4 class="white">RemoteVR</h4>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
                         <a href="#" class="portfolio-box portfolio-7" data-toggle="modal" data-target=".portfolioModal7">
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
@@ -413,6 +422,35 @@
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/WTPlayer/index.html" target="_blank">WTPlayer</a>
+                                </strong>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="row">
+                <div class="modal-head">
+                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>RemoteVR </h2>
+                        <p>
+                        The RemoteVR project is a simple attempt to platform/hardware independent multiplayer Virtual Reality.
+The concept is: run the VR application in the server, use the client to connect to the server, interact with the VR application in streaming. With this approach is easy to have more than one person in the same virtual space. Also, those persons can use different devices and OS to access the same VR experience.
+                        </p>
+                        <ul class="list-inline item-details">
+                            <li>
+                                <strong><a href="https://github.com/PierfrancescoSoffritti/RemoteVR_UnityServer" target="_blank">UnityServer</a>
+                                </strong>
+                            </li>
+                            <li>
+                                <strong><a href="https://github.com/PierfrancescoSoffritti/RemoteVR_AndroidClient" target="_blank">AndroidClient</a>
                                 </strong>
                             </li>
                         </ul>
