--- a/index.html
+++ b/index.html
@@ -192,6 +192,24 @@
                     </div>
 
                     <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
+                        <a href="#" class="portfolio-box portfolio-9" data-toggle="modal" data-target=".portfolioModal9">
+                            <div class="portfolio-box-spacer"></div>
+                            <div class="portfolio-box-caption">
+                                <h4 class="white">NeonCrystal</h4>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
+                        <a href="#" class="portfolio-box portfolio-10" data-toggle="modal" data-target=".portfolioModal10">
+                            <div class="portfolio-box-spacer"></div>
+                            <div class="portfolio-box-caption">
+                                <h4 class="white">SoUNds</h4>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
                         <a href="#" class="portfolio-box portfolio-6" data-toggle="modal" data-target=".portfolioModal6">
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
@@ -451,6 +469,54 @@ The concept is: run the VR application in the server, use the client to connect 
                             </li>
                             <li>
                                 <strong><a href="https://github.com/PierfrancescoSoffritti/RemoteVR_AndroidClient" target="_blank">AndroidClient</a>
+                                </strong>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="row">
+                <div class="modal-head">
+                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>NeonCrystal</h2>
+                        <p>
+                        Playing around with three.js
+                        </p>
+                        <ul class="list-inline item-details">
+                            <li>
+                                <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/6.%20NeonCrystal/index.html" target="_blank">Try it out</a>
+                                </strong>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade portfolioModal10" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="row">
+                <div class="modal-head">
+                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>SoUNds</h2>
+                        <p>
+                        Generate and visualize sound in JavaScript :)
+                        </p>
+                        <ul class="list-inline item-details">
+                            <li>
+                                <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/4.%20SoUNds/index.html" target="_blank">Try it out</a>
                                 </strong>
                             </li>
                         </ul>
